fix:header alignment of email us

--- a/src/app/(home)/components/header/header.css
+++ b/src/app/(home)/components/header/header.css
@@ -620,8 +620,7 @@
   flex-shrink: 0;
   display: flex;
   flex-direction: row;
-
-  align-items: center;
+  align-items: flex-end;
   padding: 14px 0 24px;
   margin-top: auto;
   width: 100%;
@@ -700,7 +699,7 @@
   min-width: 0;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-end;
   text-align: left;
 }
 
